plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'

    id 'com.github.johnrengelman.processes' version '0.5.0'
    id 'org.springdoc.openapi-gradle-plugin' version '1.3.3'

    id 'org.openapi.generator' version '5.3.0'
}

group = 'com.mail-app'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok'

    compileOnly 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.5'
    implementation 'org.springframework.security:spring-security-oauth2-client:5.7.5'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server:5.7.5'

    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre17'
    implementation 'org.jsoup:jsoup:1.15.3'

    implementation 'com.okta.spring:okta-spring-boot-starter:2.1.6'
    implementation 'com.okta.jwt:okta-jwt-verifier-impl:0.5.7'
    implementation 'com.okta.jwt:okta-jwt-verifier:0.5.7'

    compileOnly 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

openApi {
    outputDir = file("$buildDir/openApi")
    outputFileName = "openApi.json"
}

openApiValidate {
    inputSpec = "${buildDir}/openApi/openApi.json"
}

openApiGenerate {
    generatorName = "typescript-angular"
    inputSpec = "$buildDir/openApi/openApi.json".toString()
    outputDir = "$buildDir/openApi/generated".toString()

    configOptions = [fileNaming: "kebab-case"]
}
